[package]
name = "dictionarium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"

[dependencies.parse_wiki_text]
version = "0.1.5"
path = "parse_wiki_text"
